Fix: input IPs - alignement visuel avec le bouton adjacent
- Ajout type="text" manquant sur l'input #ms_allowed_ips
- Ajout class="regular-text" pour hériter des styles WP natifs
- Ajout vertical-align: middle en CSS pour l'alignement avec le bouton

--- a/admin/css/maintenance-switch-admin.scss
+++ b/admin/css/maintenance-switch-admin.scss
@@ -7,6 +7,11 @@ textarea[readonly] {
   color: #999;
 }
 
+// Align the IP input with the adjacent button
+#ms_allowed_ips {
+  vertical-align: middle;
+}
+
 textarea {
   width: 95%;
 }
